fix overflow bug on rails pages

--- a/app/assets/stylesheets/admin.css.less
+++ b/app/assets/stylesheets/admin.css.less
@@ -1,10 +1,19 @@
 @import 'variables.css.less';
 @import 'mixins.css.less';
 
+
 .admin-page {
-  padding: 1em;
+
+  .admin-table{
+    max-width:30rem;
+    border:1px solid #AAA;
+    margin: 2rem auto;
+  }
+
+  .full-page();
 
   table {
-    .stripey-table
+    .stripey-table;
+    width:100%;
   }
 }
