--- a/app/assets/stylesheets/mixins.css.less
+++ b/app/assets/stylesheets/mixins.css.less
@@ -280,6 +280,7 @@ background-image: linear-gradient(to right, @left-color 0%, @right-color @right-
 
 .stripey-table() {
   border-width:0;
+  border-collapse: collapse;
   thead{
     td{
     font-weight: bold;
@@ -315,4 +316,14 @@ background-image: linear-gradient(to right, @left-color 0%, @right-color @right-
   &:hover{
     text-decoration: underline;
   }
+}
+
+.full-page(){
+  position:absolute;
+  top:2.5rem;
+  left:0;
+  right:0;
+  bottom:0;
+  overflow-x:hidden;
+  overflow-y:auto;
 }
