--- a/app/assets/stylesheets/profile.css.less
+++ b/app/assets/stylesheets/profile.css.less
@@ -1,3 +1,10 @@
+@import 'variables.css.less';
+@import 'mixins.css.less';
+
+.profile-page{
+  .full-page();
+}
+
 .profile-update-form{
   width:40rem;
   margin:5rem auto;
